Don't fail when the server sends an invalid UIDL entry. Instead, generate a fake UID for and delete the mail from the server (after downloading it).

Based on patch by Patrick McManus <mcmanus at ducksong dot com>.

BUG: 127696


svn path=/trunk/KDE/kdepim/; revision=766946